# ChakraVyuh-Version3

./: .env.example  .gitignore  DASHBOARD_SUMMARY.md  FEDERATED_DASHBOARD_GUIDE.md  FEDERATED_DASHBOARD_USER_GUIDE.md  FEDERATED_DASHBOARD_VISUAL_GUIDE.md  FEDERATED_DOCUMENTATION_INDEX.md  FEDERATED_QUICK_REFERENCE.md  README.md  README_DASHBOARD.md  pyproject.toml  quick-start.bat  quick-start.sh  requirements-minimal.txt  requirements-phase1.txt  requirements.txt
backend_api/: federated_api.py  main.py
backend_api/federated_checkpoints/: global_model_round1_best.npy
data/cicids_2017/: README.md
frontend_dashboard/: App.css  App.js  Dashboard.css  Dashboard.jsx  index.html  package.json  vite.config.js
frontend_dashboard/src/: App.jsx  Dashboard.css  Dashboard.jsx
phase1_ml_detector/: __init__.py  detector_trainer.py  network_autoencoder.py  test_integration.py  threat_detector.py
phase2_federated/: README.md  __init__.py  aggregation_server.py  demo_federated.py  federated_node.py  federated_trainer.py
phase2_federated/federated_checkpoints/: global_model_round1_best.npy
phase3_honeypot/: IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  attack_test_toolkit.py  fake_sql_honeypot.py  fake_ssh_honeypot.py  fake_web_honeypot.py  honeypot_monitor.py  start_honeypots.bat  start_honeypots.sh
src/: __init__.py
src/inference/: threat_detector.py
src/models/: isolation_forest_detector.py  network_autoencoder.py
src/preprocessing/: flow_preprocessor.py
src/utils/: logger.py  (+1 more)
tests/: conftest.py  test_phase1_integration.py  test_phase2_federated.py
(+5 files in other folders)
